# napalm-fsos-ssh

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  releases.yml  test.yml
napalm_fsos_ssh/: __init__.py  fsos.py
napalm_fsos_ssh/utils/textfsm_templates/: index  ping.textfsm  show_arp.textfsm  show_interfaces_brief.textfsm  show_interfaces_counters.textfsm  show_ip_interface_brief.textfsm  show_ip_route.textfsm  show_ipv6_interface_brief.textfsm  show_ipv6_neighbors.textfsm  show_ipv6_route.textfsm  show_lldp_neighbor.textfsm  show_lldp_neighbor_interface.textfsm  show_memory.textfsm  show_ntp.textfsm  show_snmp_server.textfsm  show_snmp_server_engine_id.textfsm  show_system.textfsm  show_transceiver.textfsm  show_users.textfsm  show_version.textfsm  show_vlan_all.textfsm  traceroute.textfsm
src/napalm_fsos_ssh/: fsos.py
src/napalm_fsos_ssh/utils/textfsm_templates/: index  ping.textfsm  show_arp.textfsm  show_interfaces_brief.textfsm  show_interfaces_counters.textfsm  show_ip_interface_brief.textfsm  show_ip_route.textfsm  show_ipv6_interface_brief.textfsm  show_ipv6_neighbors.textfsm  show_ipv6_route.textfsm  show_lldp_neighbor.textfsm  show_lldp_neighbor_interface.textfsm  show_memory.textfsm  show_ntp.textfsm  show_snmp_server.textfsm  show_snmp_server_engine_id.textfsm  show_system.textfsm  show_transceiver.textfsm  show_users.textfsm  show_version.textfsm  show_vlan_all.textfsm  traceroute.textfsm
tests/unit/: TestFsosDriver.py  conftest.py  test_getters.py
tests/unit/mocked_data/test_get_arp_table_with_vrf/normal/: expected_result.json  show_arp.txt
tests/unit/mocked_data/test_get_config/normal/: expected_result.json  show_startup_config.txt
tests/unit/mocked_data/test_get_config_filtered/normal/: expected_result.json
tests/unit/mocked_data/test_get_config_sanitized/normal/: expected_result.json
tests/unit/mocked_data/test_get_environment/normal/: expected_result.json  show_memory.txt
tests/unit/mocked_data/test_get_facts/normal/: expected_result.json  show_system.txt  show_version.txt
tests/unit/mocked_data/test_get_interfaces/normal/: expected_result.json  show_interfaces_brief.txt
tests/unit/mocked_data/test_get_interfaces_counters/normal/: expected_result.json  show_interfaces_counters.txt
tests/unit/mocked_data/test_get_interfaces_ip/normal/: expected_result.json  show_ip_interface_brief.txt  show_ipv6_interface_brief.txt
tests/unit/mocked_data/test_get_ipv6_neighbors_table/normal/: expected_result.json  show_ipv6_neighbors.txt
tests/unit/mocked_data/test_get_lldp_neighbors/normal/: expected_result.json  show_lldp_neighbor.txt
tests/unit/mocked_data/test_get_lldp_neighbors_detail/normal/: expected_result.json  show_lldp_neighbor_Eth_1_19.txt  show_lldp_neighbor_port_channel_1.txt
tests/unit/mocked_data/test_get_ntp_servers/normal/: expected_result.json  show_ntp.txt
tests/unit/mocked_data/test_get_optics/normal/: expected_result.json  show_transceiver.txt
tests/unit/mocked_data/test_get_route_to/normal/: show_ip_route.txt
tests/unit/mocked_data/test_get_route_to_longer/normal/: expected_result.json  show_ipv6_route.txt
tests/unit/mocked_data/test_get_snmp_information/normal/: expected_result.json  show_snmp_server.txt  show_snmp_server_engineID.txt
tests/unit/mocked_data/test_get_users/normal/: expected_result.json  show_users.txt
tests/unit/mocked_data/test_get_vlans/normal/: expected_result.json  show_vlan_all.txt
(+5 files in other folders)
