[tool.poetry]
name = "napalm-fsos-ssh"
version = "0"
description = "Napalm driver for FSOS through SSH"
authors = ["Ludovic Ortega <ludovic.ortega@adminafk.fr>"]
license = "CeCILL"
readme = "README.md"
homepage = "https://github.com/napalm-automation-community/napalm-fsos-ssh"
repository = "https://github.com/napalm-automation-community/napalm-fsos-ssh"
keywords = ["napalm", "fsos", "netmiko"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Topic :: Utilities",
]
include = [
    "LICENSE",
    "LICENSE.fr",
]

[tool.poetry.dependencies]
python = ">3.8,<3.12"
napalm = ">=4.0,<4.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4,<8.2.0"
ruff = ">=0.1.11,<0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
